1. complete the basic zone alert function 2. save user infto to sp

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
         completions."
     </string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_zone_list">Zones</string>
+    <string name="title_zone_detail">Zone Detail</string>
 </resources>
