--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="GOOGLE_MAPS_API_KEY">AIzaSyCvCTEV6gBDxYd080NS_gyhy9iIl9BxH38</string>
+    <string name="GOOGLE_DIRECTION_API_KEY">AIzaSyC2p7x4AuXtkZOHNVMnLHlOWTZrLL-WMtg</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
